counter-deployment.busybox.yaml
kind: Deployment
apiVersion:	extensions/v1beta1
metadata:
  name: counter-deployment
  labels:
    app: counter
    version: v2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: counter
      version: v2
  template:
    metadata:
      labels:
        app: counter
        version: v2
    spec:
      containers:
      - name: count
        image: busybox
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "100m"
        args: [/bin/sh, -c,
                'i=0; while true; do echo "counter-deployment - $i: $(date)"; i=$((i+1)); sleep 1; done']
