redis-deployment.yaml
kind: Deployment
apiVersion:	apps/v1
metadata:
  name: redis-master
  labels:
    app: redis
spec:
  selector:
    matchLabels:
      app: redis
      env: test
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
        env: test
    spec:
      containers:
      - name: master
        image: k8s.gcr.io/redis
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 6379
