counter-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: counter-service
spec:
  selector:
    app: counter
    env: test
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: LoadBalancer
