redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  labels:
    app: redis
    env: test
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: redis
    env: test
