counter-netpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: counter-access
spec:
  podSelector:
    matchLabels:
      app: counter
      env: test
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: counter
